// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBlock match snapshot TwoColsLayout simple 1`] = `
<div>
  <div
    class="css-ksvmh9"
  >
    <div
      class="css-1lup9bf"
    >
      Hello World
    </div>
    <div
      class="css-w4yc1"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`TitleBlock match snapshot TwoColsLayout with Array in left 1`] = `
<div>
  <div
    class="css-ksvmh9"
  >
    <div
      class="css-1lup9bf"
    >
      hello world One
      hello world Two
    </div>
    <div
      class="css-w4yc1"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-13u4ebv-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Hello world
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
